Feat: Google Calendar Integration

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "@prisma/client": "^7.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-list-endpoints": "^7.1.1"
+    "express-list-endpoints": "^7.1.1",
+    "googleapis": "^166.0.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
