--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,15 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
+    "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "express-list-endpoints": "^7.1.1"
+    "express-list-endpoints": "^7.1.1",
+    "openai": "^6.9.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/node": "^24.10.1",
     "prisma": "^7.0.0",
