--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-list-endpoints": "^7.1.1",
-    "googleapis": "^166.0.0"
+    "googleapis": "^166.0.0",
+    "openai": "^6.9.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
