--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@anthropic-ai/sdk": "^0.25.1",
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
@@ -23,7 +24,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-list-endpoints": "^7.1.1",
-    "googleapis": "^166.0.0"
+    "googleapis": "^166.0.0",
+    "ical": "^0.8.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
